--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@sentry/node": "^7.101.1",
+    "@sentry/profiling-node": "^7.101.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
